--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets" : ["es2015", "react"]
+  "presets" : ["es2015", "react"],
+  "plugins": [
+    ["babel-plugin-root-import", {
+      "rootPathSuffix": "src/"
+    }]
+  ]
 }
