--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Redux-react example",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register \"src/**/*.test.js\"",
+    "test": "mocha --compilers js:babel-core/register \"tests/**/*.test.js\"",
     "server": "webpack-dev-server",
     "api": "node api.js",
     "all": "npm-run-all --parallel server api",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.1",
